2015-10-20  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/68017
	* gcc.dg/torture/pr68017.c: New testcase.

2015-10-20  Szabolcs Nagy  <szabolcs.nagy@arm.com>

	PR target/66912
	* gcc.target/aarch64/pr66912.c: New.
	* gcc.target/arm/pr66912.c: New.

2015-10-19  Steven G. Kargl  <kargl@gcc.gnu.org>

	* gfortran.dg/pr67900.f90: New tests.

2015-10-19  Pierre-Marie de Rodat  <derodat@adacore.com>

	* gnat.dg/opt50.adb: New test.
	* gnat.dg/opt50_pkg.adb: New helper.
	* gnat.dg/opt50_pkg.ads: New helper.

2015-10-19  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/68019
	* gfortran.dg/pr68019.f90: new test.

2015-10-19  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/67975
	* gcc.dg/tree-ssa/ssa-fre-50.c: New testcase.

2015-10-19  Richard Biener  <rguenther@suse.de>

	* gcc.dg/torture/builtin-cproj-1.c: Skip for -O0.

2015-10-19  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/67995
	* gcc.target/i386/pr67995-1.c: New test.
	* gcc.target/i386/pr67995-2.c: Likewise.
	* gcc.target/i386/pr67995-3.c: Likewise.

2015-10-19  Joost VandeVondele  <vondele@gnu.gcc.org>

	PR middle-end/68002
	* gcc.dg/PR68002.c: New test.

2015-10-19  Richard Sandiford  <richard.sandiford@arm.com>

	* gcc.dg/builtins-20.c: Remove undefined behavior.

2015-10-18  Mikael Morin  <mikael@gcc.gnu.org>

	PR fortran/67758
	* gfortran.dg/common_25.f90: New file.

2015-10-18  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/67177
	* gfortran.dg/move_alloc_15.f90: New test
	* gfortran.dg/move_alloc_16.f90: New test

	PR fortran/67977
	* gfortran.dg/deferred_character_assignment_1.f90: New test

2015-10-17  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/67987
	* gfortran.df/pr67987.f90: New test.
	* gfortran.dg/char_length_2.f90: Update testcase.

2015-10-16  H.J. Lu  <hongjiu.lu@intel.com>

	* gcc.target/i386/iamcu/test_basic_returning.c
	(def_test_returning_type): Use union to check float return bits.

2015-10-16  H.J. Lu  <hongjiu.lu@intel.com>
