@@ -1,3 +1,7 @@
+2015-10-20  Alan Lawrence  <alan.lawrence@arm.com>
+
+	* gcc.target/aarch64/vdiv_f.c: Use __builtin_nan.
+
 2015-10-20  Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/68017
